--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
             </div>
             <div class="col-12 col-md-4 img-col mb-5 contenedor-img-hero">
-              <img src="/assets/dev.jpg" alt="Nuestro Hero" class="img-fluid" width="400" height="400">
+              <img src="dev.jpg" alt="Nuestro Hero" class="img-fluid" width="400" height="400">
             </div>
           </div>
         </section>
@@ -77,7 +77,7 @@
                 <!--2-->
                 <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                   <div class="card col col-lg-4 p-3" style="width: 22rem;">
-                    <img src="/assets/MySQL.png" class="icon" alt="mysql">
+                    <img src="MySQL.png" class="icon" alt="mysql">
                     <div class="card-body">
                       <h5 class="card-title">MySQL</h5>
                       <p class="card-text">Uso de lenguaje de base de datos para trabajos de PHP.</p>
@@ -87,7 +87,7 @@
                 <!--3-->
                 <div class="col-md-6 col-lg-4 d-flex justify-content-end">
                   <div class="card col col-lg-4 p-3" style="width: 22rem;">
-                    <img src="/assets/CodeIgniter.png" class="icon" alt="codeigniter">
+                    <img src="CodeIgniter.png" class="icon" alt="codeigniter">
                     <div class="card-body">
                       <h5 class="card-title">CodeIgniter 4</h5>
                       <p class="card-text">Framework como herramienta de trabajo para proyectos.</p>
@@ -98,7 +98,7 @@
               <!--4-->
               <div class="col-md-6 col-lg-4 d-flex justify-content-start">
                 <div class="card col col-lg-4 p-3" style="width: 22rem;">
-                  <img src="/assets/Python.png"  class="icon" alt="python">
+                  <img src="Python.png"  class="icon" alt="python">
                   <div class="card-body">
                     <h5 class="card-title">Python</h5>
                     <p class="card-text">Conocimiento básico sobre esta herramienta tecnológica.</p>
@@ -108,7 +108,7 @@
               <!--5-->
               <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                 <div class="card col col-lg-4 p-3" style="width: 22rem;">
-                  <img src="/assets/MongoDB.png"  class="icon" alt="python">
+                  <img src="MongoDB.png"  class="icon" alt="python">
                   <div class="card-body">
                     <h5 class="card-title">MongoDB</h5>
                     <p class="card-text">Conocimiento básico sobre esta herramienta tecnológica.</p>
@@ -118,7 +118,7 @@
               <!--6-->
               <div class="col-md-6 col-lg-4 d-flex justify-content-end">
                 <div class="card col col-lg-4 p-3" style="width: 22rem;">
-                  <img src="/assets/oxford.png"  class="icon" alt="python">
+                  <img src="oxford.png"  class="icon" alt="python">
                   <div class="card-body">
                     <h5 class="card-title">Oxford's certificate</h5>
                     <p class="card-text">English intermediate level (B1) broadcasted by Oxford University.</p>
@@ -134,7 +134,7 @@
         <div class="container">
           <div class="row align-item-center mx-md-1">
             <div class="col-12 text-center text-md-start col-md-4 mb-4">
-              <img src="/assets/yo.jpg" alt="Sobre mi" class="img-fluid yo" width="300" height="300">
+              <img src="yo.jpg" alt="Sobre mi" class="img-fluid yo" width="300" height="300">
             </div>
             <div class="col-12 col-md-8 px-4 pb-4 pt-0">
               <h1 class="fs-3">Sobre mi</h1>
@@ -206,9 +206,9 @@
               <div class="col">
                 <h1>Contacto</h1>
               
-                  <p>LinkedIn: <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank"><img src="/assets/logolink.png" alt=""style="width: 40px; height40px"></a></p>
+                  <p>LinkedIn: <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank"><img src="logolink.png" alt=""style="width: 40px; height40px"></a></p>
                   <p>
-                  Email: federicojmoran@gmail.com <img src="/assets/logoemail.jpg" alt=""style="width: 40px; height40px">
+                  Email: federicojmoran@gmail.com <img src="logoemail.jpg" alt=""style="width: 40px; height40px">
                   </p>
               </div>
             </div>
