--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Estilos propios-->
     <link rel="stylesheet" href="styles.css">
 </head>
-<>
+<body>
     <header>
         <!-- Inicio NavBar-->
         <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hidden-navbar">
@@ -67,7 +67,7 @@
 
                 <div class="col-md-6 col-lg-4 d-flex justify-content-start">
                   <div class="card col col-lg-4 p-3" style="width: 22rem;">
-                    <img src="/assets/PHP.png" class="icon" alt="php">
+                    <img src="PHP.png" class="icon" alt="php">
                     <div class="card-body">
                       <h5 class="card-title">PHP</h5>
                       <p class="card-text">Aprendizaje del lenguaje en instituto Normal Superior Gral Manuel Belgrano de Caucete, San Juan.</p>
