--- a/index.html
+++ b/index.html
@@ -177,9 +177,8 @@
             
                 <div class="card-body">
                   <h5 class="card-title">Utilización de framework</h5>
-                  <p class="card-text">Junto a mi compañero Facundo creamos un sistema para inscribir alumnos regulares a materias, teniendo las mismas un plan de estudio y profesor dictante.</p>
-                  <p>HTML, CSS, PHP, CODEIGNITER 4, MySQL.</p>
-                  <a href="https://github.com/federicomoran/codeig4" class="btn btn-success">Go somewhere</a>
+                  <p class="card-text"> Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back.</p>
+                  <a href="https://github.com/federicomoran/gestion_gym" class="btn btn-success">Go somewhere</a>
                 </div>
               </div>
             </div>
