--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
             </div>
             <div class="col-12 col-md-4 img-col mb-5 contenedor-img-hero">
-              <img src="dev.jpg" alt="Nuestro Hero" class="img-fluid" width="400" height="400">
+              <img src="new.jpg" alt="Nuestro Hero" class="img-fluid" width="400" height="400">
             </div>
           </div>
         </section>
