--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
             </div>
             <div class="col-12 col-md-4 img-col mb-5 contenedor-img-hero">
-              <img src="new.jpg" alt="Nuestro Hero" class="img-fluid" width="400" height="400">
+              <img src="dev.jpg" alt="Nuestro Hero" class="img-fluid" width="400" height="400">
             </div>
           </div>
         </section>
@@ -134,12 +134,21 @@
         <div class="container">
           <div class="row align-item-center mx-md-1">
             <div class="col-12 text-center text-md-start col-md-4 mb-4">
-              <img src="yo.jpg" alt="Sobre mi" class="img-fluid yo" width="300" height="300">
+              <img src="new.jpg" alt="Sobre mi" class="img-fluid yo" width="300" height="300">
             </div>
             <div class="col-12 col-md-8 px-4 pb-4 pt-0">
               <h1 class="fs-3">Sobre mi</h1>
               <p>
-                Actualmente soy desarrollador de software, me gusta el mundo IT y puedo decir que me enseña a practicar todo el tiempo la curiosidad. Aspiro a potenciar mis aptitudes, contribuir con mis conocimientos y estar receptivo para adquirir nuevas técnicas y herramientas.
+               Actualmente soy Técnico Superior de Desarrollo de Software.
+
+Mi objetivo es desarrollar mis conocimientos y habilidades para trabajos en equipo, aportando mi 
+sabiduría y con disposición de aprender nuevas metodologías y herramientas de trabajo.
+
+He desarrollado aplicaciones, en access para una practica del instituto, por otra parte otros 2 sistemas utlizando PHP, CodeIgniter 4, HTML, CSS y MySQL acorde a los requisitos demandados por mis docentes.
+Además, participé en la versión 3 para una empresa eléctrica donde utilizamos PHP y Bootstrap. 
+
+Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back.
+
               </p>
           
 
