--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="container pb-0 p-4">
           <div class="row d-flex flex-column-reverse flex-md-row">
             <div class="col-12 col-md-8 pe-md-5">
-              <h1 class="fs-3">Desarrollador / Developer</h1>
+              <h1 class="fs-3"> Programador / Developer</h1>
               <p class="pe-md-5">Actualmente soy desarrollador de software, me gusta el mundo IT y puedo decir que me enseña a practicar todo el tiempo la curiosidad. Aspiro a potenciar mis aptitudes, contribuir con mis conocimientos y estar receptivo para adquirir nuevas técnicas y herramientas.</p>
         
             </div>
@@ -209,19 +209,19 @@ Mi último proyecto fue el relevamiento, análisis, diseño e implementación pa
       <!--End projects-->
       <footer>
         <section id="contact">
-          <div class="container">
-            <div class="row align-items-center projects">
-              <div class="col">
-                <h1>Contacto</h1>
-              
-                  <p>LinkedIn: <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank"><img src="logolink.png" alt=""style="width: 40px; height40px"></a></p>
-                  <p>
-                  Email: federicojmoran@gmail.com <img src="logoemail.jpg" alt=""style="width: 40px; height40px">
-                  </p>
-              </div>
+        <div class="container">
+            <h2 class="text-center mb-5">Contacto</h2>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 text-center">
+                    <a href="tel:+542644002626" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
+                    <a href="mailto:federicojmoran@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
+                    <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
+                    <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
+                    <a href="federicomoran.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
+                </div>
             </div>
-          </div>
-        </section>
+        </div>
+    </section>
       </footer>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.8/dist/umd/popper.min.js"></script>
