--- a/index.html
+++ b/index.html
@@ -138,18 +138,15 @@
             </div>
             <div class="col-12 col-md-8 px-4 pb-4 pt-0">
               <h1 class="fs-3">Sobre mi</h1>
-              <p>
-               Actualmente soy Técnico Superior de Desarrollo de Software.
+              <p>Actualmente soy Técnico Superior de Desarrollo de Software.</p>
+                        
+                <p></p>Mi objetivo es desarrollar mis conocimientos y habilidades para trabajos en equipo, aportando mi 
+sabiduría y con disposición de aprender nuevas metodologías y herramientas de trabajo. </p>
 
-Mi objetivo es desarrollar mis conocimientos y habilidades para trabajos en equipo, aportando mi 
-sabiduría y con disposición de aprender nuevas metodologías y herramientas de trabajo.
+<p></p>He desarrollado aplicaciones, en access para una practica del instituto, por otra parte otros 2 sistemas utlizando PHP, CodeIgniter 4, HTML, CSS y MySQL acorde a los requisitos demandados por mis docentes.
+Además, participé en la versión 3 para una empresa eléctrica donde utilizamos PHP y Bootstrap.</p>
 
-He desarrollado aplicaciones, en access para una practica del instituto, por otra parte otros 2 sistemas utlizando PHP, CodeIgniter 4, HTML, CSS y MySQL acorde a los requisitos demandados por mis docentes.
-Además, participé en la versión 3 para una empresa eléctrica donde utilizamos PHP y Bootstrap. 
-
-Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back.
-
-              </p>
+<p></p>Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back. </p>
           
 
             </div>
