--- a/index.html
+++ b/index.html
@@ -138,15 +138,12 @@
             </div>
             <div class="col-12 col-md-8 px-4 pb-4 pt-0">
               <h1 class="fs-3">Sobre mi</h1>
-              <p>Actualmente soy Técnico Superior de Desarrollo de Software.</p>
-                        
-                <p></p>Mi objetivo es desarrollar mis conocimientos y habilidades para trabajos en equipo, aportando mi 
+              <p>Actualmente soy Técnico Superior de Desarrollo de Software.</p>            
+            <p>Mi objetivo es desarrollar mis conocimientos y habilidades para trabajos en equipo, aportando mi 
 sabiduría y con disposición de aprender nuevas metodologías y herramientas de trabajo. </p>
-
-<p></p>He desarrollado aplicaciones, en access para una practica del instituto, por otra parte otros 2 sistemas utlizando PHP, CodeIgniter 4, HTML, CSS y MySQL acorde a los requisitos demandados por mis docentes.
+<p>He desarrollado aplicaciones, en access para una practica del instituto, por otra parte otros 2 sistemas utlizando PHP, CodeIgniter 4, HTML, CSS y MySQL acorde a los requisitos demandados por mis docentes.
 Además, participé en la versión 3 para una empresa eléctrica donde utilizamos PHP y Bootstrap.</p>
-
-<p></p>Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back. </p>
+<p>Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back.</p>
           
 
             </div>
@@ -205,20 +202,21 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
       </main>
       <!--End projects-->
       <footer>
-        <section id="contact">
-        <div class="container">
-            <h2 class="text-center mb-5">Contacto</h2>
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-6 text-center">
-                    <a href="tel:+542644002626" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
-                    <a href="mailto:federicojmoran@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
-                    <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
-                    <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
-                    <a href="federicomoran.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
-                </div>
+       <section id="contact">
+    <div class="container">
+        <h1 class="text-center mb-5">Contacto</h1>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 text-center">
+                <a href="tel:+542644002626" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
+                <a href="mailto:federicojmoran@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
+                <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
+                <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
+                <a href="federicomoran.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
       </footer>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.8/dist/umd/popper.min.js"></script>
