--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
                   <h5 class="card-title">Sistema de alumnos</h5>
                   <p class="card-text">Desarrollé un sistema donde los alumnos necesitaban inscribirse a mesas de examenes, estas mismas estaban conformadas por docentes.</p><br>
                   <p>HTML, CSS, PHP, MySQL.</p>
-                  <a href="https://github.com/federicomoran/sistemalumnos" class="btn btn-success">Go somewhere</a>
+                  <a href="https://github.com/federicomoran/sistemalumnos" class="btn btn-success">Ver proyecto</a>
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
                 <div class="card-body">
                   <h5 class="card-title">Utilización de framework</h5>
                   <p class="card-text"> Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back.</p>
-                  <a href="https://github.com/federicomoran/gestion_gym" class="btn btn-success">Go somewhere</a>
+                  <a href="https://github.com/federicomoran/gestion_gym" class="btn btn-success">Ver proyecto</a>
                 </div>
               </div>
             </div>
@@ -192,7 +192,7 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
                   <h5 class="card-title">Matriz de adyacencia</h5>
                   <p class="card-text">En Python he creado una matriz de adyacencia, una vez ejecutado el código, la misma se imprime al azar (6x6) mostrando su número de aristas, lazos y grado de cada vértice.</p>
                   <p>Python.</p>
-                  <a href="https://github.com/federicomoran/matriz" class="btn btn-success">Go somewhere</a>
+                  <a href="https://github.com/federicomoran/matriz" class="btn btn-success">Ver proyecto</a>
                 </div>
               </div>
             </div>
@@ -207,11 +207,11 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
         <h1 class="text-center mb-5">Contacto</h1>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 text-center">
-                <a href="tel:+542644002626" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
-                <a href="mailto:federicojmoran@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
-                <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
-                <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
-                <a href="federicomoran.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
+                <a href="tel:+542644002626" class="btn btn-success w-100 mb-3">Número de teléfono</a>
+                <a href="mailto:federicojmoran@gmail.com" class="btn btn-success w-100 mb-3">Correo electrónico</a>
+                <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-success w-100 mb-3">Ubicación</a>
+                <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank" class="btn btn-success w-100 mb-3">LinkedIn</a>
+                <a href="federicomoran.pdf" target="_blank" class="btn btn-success w-100 mb-3">Curriculum Vitae</a>
             </div>
         </div>
     </div>
