--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
                 <a href="mailto:federicojmoran@gmail.com" class="btn btn-success w-100 mb-3">Correo electrónico</a>
                 <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-success w-100 mb-3">Ubicación</a>
                 <a href="https://www.linkedin.com/in/federicojmoran/" target="_blank" class="btn btn-success w-100 mb-3">LinkedIn</a>
-                <a href="cvfederico.moran" target="_blank" class="btn btn-success w-100 mb-3">Curriculum Vitae</a>
+                <a href="cvfederico.moran.pdf" target="_blank" class="btn btn-success w-100 mb-3">Curriculum Vitae</a>
             </div>
         </div>
     </div>
