--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
             
                 <div class="card-body">
                   <h5 class="card-title">Utilización de framework</h5>
-                  <p class="card-text"> Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back.</p>
-                  <a href="https://github.com/federicomoran/gestion_gym" class="btn btn-success">Ver proyecto</a>
+                  <p class="card-text"> Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back. <b>User: Fede Pass:1234</</b></p>
+                  <a href="https://practica5.iesmbelgranosj.edu.ar/forwardtech/public/" class="btn btn-success">Ver proyecto</a>
                 </div>
               </div>
             </div>
