--- a/index.html
+++ b/index.html
@@ -138,13 +138,11 @@
             </div>
             <div class="col-12 col-md-8 px-4 pb-4 pt-0">
               <h1 class="fs-3">Sobre mi</h1>
-              <p>Actualmente soy Técnico Superior de Desarrollo de Software.</p>            
-            <p>Mi objetivo es desarrollar mis conocimientos y habilidades para trabajos en equipo, aportando mi 
-sabiduría y con disposición de aprender nuevas metodologías y herramientas de trabajo. </p>
-<p>He desarrollado aplicaciones, en access para una practica del instituto, por otra parte otros 2 sistemas utlizando PHP, CodeIgniter 4, HTML, CSS y MySQL acorde a los requisitos demandados por mis docentes.
-Además, participé en la versión 3 para una empresa eléctrica donde utilizamos PHP y Bootstrap.</p>
-<p>Mi último proyecto fue el relevamiento, análisis, diseño e implementación para suplir las necesidades con un software en un gimnasio. Utilicé HTML, CSS y Bootstrap para el diseño del mismo y PHP, MySQL y CodeIgniter 4 para el armado del back.</p>
-          
+              <p>Soy Técnico Superior en Desarrollo de Software, graduado en octubre de 2024 (cursado desde marzo de 2021). Actualmente me encuentro cursando la Licenciatura en Administración en la Universidad de Congreso (UC), iniciada en agosto de 2025.</p>
+                <p>Mi objetivo profesional es potenciar mis competencias técnicas y de gestión, integrándome en equipos multidisciplinarios donde pueda aplicar mis conocimientos en desarrollo de software, contribuir con soluciones eficientes y continuar incorporando nuevas metodologías, frameworks y herramientas tecnológicas.</p> 
+                <p>He diseñado y desarrollado aplicaciones utilizando diferentes stacks tecnológicos. Entre ellos, una aplicación en Microsoft Access como práctica académica, y dos sistemas completos desarrollados en PHP con CodeIgniter 4, HTML, CSS y MySQL, en respuesta a requerimientos específicos planteados en el ámbito académico. Asimismo, participé en la implementación de una versión de un sistema de gestión para una empresa del sector eléctrico, utilizando PHP y Bootstrap.</p> 
+              <p>Mi proyecto más grande consistió en el relevamiento, análisis funcional, diseño e implementación de un sistema de gestión para un gimnasio. En este desarrollo integré tecnologías frontend (HTML, CSS, Bootstrap) con backend en PHP y CodeIgniter 4, junto con una base de datos en MySQL, logrando un producto escalable, mantenible y adaptado a las necesidades del cliente.</p> 
+                <p>Adicionalmente, desarrollé un sistema para la gestión de pacientes de un consultorio de cosmetología, que incluyó CRUD completo y registro ABM. El proyecto fue implementado como aplicación local utilizando CodeIgniter 4, PHP, MySQL y Bootstrap, optimizando los procesos administrativos del consultorio.</p>
 
             </div>
 
@@ -197,6 +195,37 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
                 </div>
               </div>
             </div>
+              <!-- Card Bootstrap 5: GlowEstética (Cosmetología) -->
+<div class="card h-100 shadow-sm rounded-2">
+  <div class="card-body d-flex flex-column">
+    <h5 class="card-title">GlowEstética — Sistema de gestión para consultorio de cosmetología</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Proyecto local · CRUD / ABM · CodeIgniter 4</h6>
+
+    <div class="mb-3">
+      <span class="badge bg-light text-dark border me-1">PHP</span>
+      <span class="badge bg-light text-dark border me-1">CodeIgniter 4</span>
+      <span class="badge bg-light text-dark border me-1">MySQL</span>
+      <span class="badge bg-light text-dark border me-1">Bootstrap</span>
+    </div>
+
+    <p class="card-text">
+      Aplicación local para la gestión de pacientes y agenda en un consultorio de cosmetología. Implementa CRUD completo (ABM), validaciones del lado servidor, manejo de sesiones y un panel administrativo responsive.
+    </p>
+
+    <ul class="mb-3 small">
+      <li>Arquitectura MVC con CodeIgniter 4.</li>
+      <li>Formularios con validación y protección CSRF.</li>
+      <li>Persistencia en MySQL; endpoints para buscar/filtrar pacientes.</li>
+      <li>Interfaz responsive desarrollada con Bootstrap (adaptada a escritorio y móvil).</li>
+    </ul>
+
+    <div class="mt-auto">
+      <a href="https://github.com/TU_USUARIO/glow-estetica" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener">Ver repo</a>
+      <a href="#" class="btn btn-primary btn-sm ms-2">Guía instalación local</a>
+    </div>
+  </div>
+</div>
+
           </div>
         </div>
         </section>
@@ -225,3 +254,4 @@ Además, participé en la versión 3 para una empresa eléctrica donde utilizamo
 
 </body>
 </html>
+
