--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
           <div class="row d-flex flex-column-reverse flex-md-row">
             <div class="col-12 col-md-8 pe-md-5">
               <h1 class="fs-3"> Programador / Developer</h1>
-              <p class="pe-md-5">Actualmente soy desarrollador de software, me gusta el mundo IT y puedo decir que me enseña a practicar todo el tiempo la curiosidad. Aspiro a potenciar mis aptitudes, contribuir con mis conocimientos y estar receptivo para adquirir nuevas técnicas y herramientas.</p>
+           <p class="pe-md-5">
+Soy Técnico Superior en Desarrollo de Software y actualmente curso la Licenciatura en Administración en UC.  
+Me apasiona el mundo IT, donde la curiosidad y el aprendizaje constante son clave.  
+Busco fortalecer mis habilidades técnicas y trabajar en equipo para generar soluciones efectivas.  
+Siempre estoy abierto a nuevas metodologías, herramientas y formas de mejorar mi trabajo.
+</p>
+
         
             </div>
             <div class="col-12 col-md-4 img-col mb-5 contenedor-img-hero">
@@ -195,36 +201,36 @@
                 </div>
               </div>
             </div>
-              <!-- Card Bootstrap 5: GlowEstética (Cosmetología) -->
-<div class="card h-100 shadow-sm rounded-2">
-  <div class="card-body d-flex flex-column">
-    <h5 class="card-title">GlowEstética — Sistema de gestión para consultorio de cosmetología</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Proyecto local · CRUD / ABM · CodeIgniter 4</h6>
-
-    <div class="mb-3">
-      <span class="badge bg-light text-dark border me-1">PHP</span>
-      <span class="badge bg-light text-dark border me-1">CodeIgniter 4</span>
-      <span class="badge bg-light text-dark border me-1">MySQL</span>
-      <span class="badge bg-light text-dark border me-1">Bootstrap</span>
-    </div>
-
-    <p class="card-text">
-      Aplicación local para la gestión de pacientes y agenda en un consultorio de cosmetología. Implementa CRUD completo (ABM), validaciones del lado servidor, manejo de sesiones y un panel administrativo responsive.
-    </p>
-
-    <ul class="mb-3 small">
-      <li>Arquitectura MVC con CodeIgniter 4.</li>
-      <li>Formularios con validación y protección CSRF.</li>
-      <li>Persistencia en MySQL; endpoints para buscar/filtrar pacientes.</li>
-      <li>Interfaz responsive desarrollada con Bootstrap (adaptada a escritorio y móvil).</li>
-    </ul>
-
-    <div class="mt-auto">
-      <a href="https://github.com/TU_USUARIO/glow-estetica" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener">Ver repo</a>
-      <a href="#" class="btn btn-primary btn-sm ms-2">Guía instalación local</a>
+              <!-- Proyecto GlowEstética -->
+<div class="col-lg-4 d-flex justify-content-center card-proyectos">
+  <div class="card col" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">GlowEstética</h5>
+      <p class="card-text">
+        Sistema local para un consultorio de cosmetología que permite la gestión de pacientes con CRUD completo (ABM), validaciones y administración de turnos. 
+        Implementado con CodeIgniter 4, PHP, MySQL y Bootstrap.
+      </p>
+      <p>CodeIgniter 4, PHP, MySQL, Bootstrap.</p>
+      <a href="https://github.com/federicomoran/glow-estetica" class="btn btn-success">Ver proyecto</a>
     </div>
   </div>
 </div>
+
+<!-- Proyecto Sistema de Mesas de Examen -->
+<div class="col-lg-4 d-flex justify-content-center card-proyectos">
+  <div class="card col" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Sistema de Mesas de Examen</h5>
+      <p class="card-text">
+        Desarrollo académico que permite inscribir alumnos a mesas de examen y asignar profesores en distintos roles (titular, suplente y vocal). 
+        Incluye también la gestión de materias. Creado con CodeIgniter 4.
+      </p>
+      <p>CodeIgniter 4, PHP, CSS, MySQL.</p>
+      <a href="https://github.com/federicomoran/sistemalumnos" class="btn btn-success">Ver proyecto</a>
+    </div>
+  </div>
+</div>
+
 
           </div>
         </div>
@@ -254,4 +260,5 @@
 
 </body>
 </html>
+
 
